--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button class="button" onclick="window.location.href='search.html'">Long Video</button>
         <button class="button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSesq5myX42Z4J0Hx3SZIOcf_b2nBvaMlXKbE9fKWf2FOUamxw/viewform?usp=header'">Sign Up</button>
         <button class="button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSdoe1ahjzfbALr_gCfFyTweIE9XAyGq_LAvhTXwGKjtYfeKSg/viewform?usp=header'">Add Video</button>
-        <button class="button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSeoywhd6dEqmgG1rLpqkGGdDkQxVlEI0AvUxtdq0lmJlTOQjQ/viewform?usp=dialog'">like</button>
+        <button class="button" onclick="window.location.href='video.txt'">Add Video code</button>
     </div>
 <div class="user">
     <button class="button" onclick="window.location.href='searchuser.html'">users</button>
